Apply sonarcloud, config and logs (#1)
* Apply sonarcloud, config and logs

* Update workflow to use pnpm

* Add custom logger and traceid fix with testmock helper

* fix sonarcloud issue

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "jest-mock": "^29.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
@@ -68,6 +70,14 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
+    "coverageThreshold": {
+      "global": {
+        "statements": 86,
+        "branches": 85,
+        "functions": 86,
+        "lines": 86
+      }
+    },
     "testEnvironment": "node"
   }
 }
