Added Swagger and DX improvements

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+API_SHOW_DOCS=true # Shows swagger api doc in the /api route
 NODE_ENV="development" # this will affect log levels and availability of other features.
 
 # DEVELOPER CONFIGS (This is only allowed in test and dev environments. Never use this in stage/prod)
