--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 API_SHOW_DOCS=true # Shows swagger api doc in the /api route
 NODE_ENV="development" # this will affect log levels and availability of other features.
 
+TERMINUS_GRACEFUL_SHUTDOWN_DELAY_SECONDS=10  # The delay (in seconds) before a shutdown
+TERMINUS_HEALTHCHECK_HTTP_CHECK_URI=https://docs.nestjs.com # The target URI to perform http check against
+TERMINUS_HEALTHCHECK_HEAP_THRESHOLD_MB=50    # The MB limit for the memory heap to reach before it is flagged
+TERMINUS_HEALTHCHECK_RSS_THRESHOLD_MB=100    # The MB limit for the memory resident set size to reach before it is flagged
+TERMINUS_HEALTHCHECK_STORAGE_PATH='c:\'      # The storage path to check (in windows 'c:\' while '/' on linux)
+TERMINUS_HEALTHCHECK_STORAGE_THRESHOLD=0.5   # The %age of disk usage before it is flagged
+
 # DEVELOPER CONFIGS (This is only allowed in test and dev environments. Never use this in stage/prod)
 DEV_SHOW_REQUEST_IN_LOGS=false # Renders the endpoint and payload of the request on the console (NODE_ENV set as development or qa is needed).
