--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/terminus": "^11.0.0",
     "axios": "^1.7.9",
+    "class-validator": "^0.14.1",
     "ioredis": "^5.5.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
