--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-API_SHOW_DOCS=true # Shows swagger api doc in the /api route
+API_PORT=5000
+API_URL=http://localhost:5000
+API_CORS_ALLOWED_ORIGINS=http://localhost:3000
+
+AUTH0_DOMAIN=test.au.auth0.com # AUTH0 App Domain
+
 NODE_ENV="development" # this will affect log levels and availability of other features.
 
 TERMINUS_GRACEFUL_SHUTDOWN_DELAY_SECONDS=10  # The delay (in seconds) before a shutdown
@@ -9,4 +14,5 @@ TERMINUS_HEALTHCHECK_STORAGE_PATH='c:\'      # The storage path to check (in win
 TERMINUS_HEALTHCHECK_STORAGE_THRESHOLD=0.5   # The %age of disk usage before it is flagged
 
 # DEVELOPER CONFIGS (This is only allowed in test and dev environments. Never use this in stage/prod)
+DEV_SHOW_API_DOCS=false # Shows swagger api doc in the /api route
 DEV_SHOW_REQUEST_IN_LOGS=false # Renders the endpoint and payload of the request on the console (NODE_ENV set as development or qa is needed).
