--- a/docker-compose.build.yaml
+++ b/docker-compose.build.yaml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     environment:
       API_PORT: 5000
-      API_SHOW_DOCS: TRUE
+      DEV_SHOW_API_DOCS: TRUE
       DEV_SHOW_POSTGRES_LOGS: FALSE
       NODE_ENV: development
       TERMINUS_GRACEFUL_SHUTDOWN_DELAY_SECONDS: 10
