--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/terminus": "^11.0.0",
     "axios": "^1.7.9",
     "class-validator": "^0.14.1",
     "ioredis": "^5.5.0",
+    "jwks-rsa": "^3.1.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
